<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="230dp"
app:layout_constraintBaseline_toBaselineOf="parent"
android:background="@android:color/transparent"
tools:context=".CardCrearProyecto">

<androidx.cardview.widget.CardView
    android:id="@+id/cardDeProyecto"
    android:layout_width="380dp"
    android:layout_height="200dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="11dp"
        android:background="@color/color3">

        <ImageView
            android:id="@+id/FlotingMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/menu_flotante"
            android:contentDescription="@string/flotingMenu"/>

        <TextView
            android:id="@+id/nameProyect"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:hint="@string/nombreProyecto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80"/>

        <TextView
            android:id="@+id/descriptionProyect"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:hint="@string/descipcionProyecto" />
        <TextView
            android:id="@+id/nombrePlanta"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:hint="@string/plantaNombre" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>