<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintWidth_percent="0.9"
        app:cardCornerRadius="8dp"
        android:background="@color/color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color2"
            android:textAlignment="gravity">

            <EditText
                android:id="@+id/nameProyect"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:hint="@string/nombreProyecto"
                android:textAlignment="center"
                android:textColorHint="@android:color/black"
                android:background="@color/color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.60"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.80" />
            <Spinner
                android:id="@+id/opcionesPlantas"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/color2"
                android:textAlignment="center"
                android:prompt="@string/opciones"
                android:popupBackground="@color/color2"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/descriptionProyect"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:background="@color/color2"
                android:hint="@string/descipcionProyecto" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>